# crosschain-contract-demo

./: Cargo.toml  Makefile  README.md  tree.txt
src/: contract.rs  lib.rs  msg.rs  state.rs  state_secret.rs  state_vanilla.rs
