[package]
name = "crosschain-contract"
version = "0.0.1"
authors = ["SCRT Labs <info@scrtlabs.com>"]
edition = "2021"
description = "A demo contract that demonstrates how to write a single codebase crosschain contract"
license = "MIT"
exclude = [
  # Those files are cosmwasm-opt artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "crosschain_contract.wasm",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = ["secret"]
secret = ["secret-std", "secret-toolkit"]
vanilla = ["cosmwasm-std", "cw-storage-plus"]

[dependencies]
cosmwasm-std = { version = "1.0", optional = true }
secret-std = { package = "secret-cosmwasm-std", version = "1.0", optional = true }
cw-storage-plus = { version = "0.14", optional = true }
secret-toolkit = { version = "0.7", optional = true }

schemars = "0.8.1"
serde = { version = "1.0.114", default-features = false, features = [
  "derive",
  "alloc",
] }
serde-json-wasm = "0.2.1"
